--- a/index.html
+++ b/index.html
@@ -8,5 +8,33 @@
   </head>
   <body>
     <!-- Write your HTML here -->
+    <table>
+      <tr style="background-color: rgb(213, 213, 213);">
+        <th>City</th>
+        <th>State</th>
+        <th>2017 estimate</th>
+      </tr>
+      <col style="background-color: rgb(151, 218, 211)" />
+      <tr>
+        <td>New York</td>
+        <td>New York</td>
+        <td>8,622,698</td>
+      </tr>
+      <tr>
+        <td>Los Angeles</td>
+        <td>California</td>
+        <td>3,999,759</td>
+      </tr>
+      <tr>
+        <td>Chicago</td>
+        <td>Illinois</td>
+        <td>2,716,450</td>
+      </tr>
+      <tr>
+        <td>Houston</td>
+        <td>Texas</td>
+        <td>2,312,717</td>
+      </tr>
+    </table>
   </body>
 </html>
